// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seller module > SellerAvatar should match snapshot 1`] = `
<div
  className="root"
>
  <div
    className="root"
    style={
      Object {
        "backgroundImage": "url(/assets/images/sellers/richard-noga.jpeg)",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="root verified"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div>
    <span
      className="root bold name"
    >
      Richard Noga
    </span>
    <br />
  </div>
</div>
`;

exports[`Seller module > SellerAvatar should match snapshot with wallet amount 1`] = `
<div
  className="root"
>
  <div
    className="root"
    style={
      Object {
        "backgroundImage": "url(/assets/images/sellers/richard-noga.jpeg)",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="root verified"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div>
    <span
      className="root bold name"
    >
      Richard Noga
    </span>
    <br />
    <span
      className="root secondary walletAmount"
    >
      0.00
       ETH
    </span>
  </div>
</div>
`;
